Fixed RTL filter alignment: `flex-end` aligns left in Arabic.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1720,7 +1720,7 @@ html[dir='rtl'] {
   }
 
   .proj-filters {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 
   .prow-stack {
